feat: adding interactions comparator
